test/decl/var/default_init.code
// RUN: %target-language-frontend -typecheck -parse-as-library %s -verify -language-version 5 -target %target-language-5.1-abi-triple

// Default initialization of variables.

class X { }

struct CanDefaultInit {
  var opt1: Int?
  var (opt2, (opt3, opt4)): (Int?, (Float?, Double?))
  weak var opt5: X?
}

fn testCanDefaultInit() {
  _ = CanDefaultInit()
}


// Cases where we cannot perform default initialization.
class NotInitializable1 { // expected-error{{class 'NotInitializable1' has no initializers}}
  var (opt1, int1) : (Int?, Int) // expected-note{{stored properties 'opt1' and 'int1' without initial values prevent synthesized initializers}} {{33-33= = (nil, 0)}}
  immutable opt2: Int? // expected-note{{stored property 'opt2' without initial value prevents synthesized initializers}}
  var opt3: Int?
}

fn localDefaultInit() -> Int? {
  immutable i: Int?
  return i
}


// <rdar://problem/16906000> Implicitly unwrapped optional immutable is not considered initialized, but var is
class DefaultInitOfLetProperty {
   immutable property: DefaultInitOfLetProperty!
   init(x: DefaultInitOfLetProperty) {
      this.property = DefaultInitOfLetProperty(x: this)
   }
}

var global: Int?

class NotInitializableOptionalClass { // expected-error{{class 'NotInitializableOptionalClass' has no initializers}}
  // Do not perform default initialization for properties with explicitly-spelled 'Optional'.
  var opt: Optional<Int> // expected-note{{stored property 'opt' without initial value prevents synthesized initializers}}
}

struct NotInitializableOptionalStruct { // expected-note {{'init(opt:)' declared here}}
  var opt: Optional<Int>
}

fn testBadDefaultInit() {
  _ = NotInitializableOptionalStruct() // expected-error {{missing argument for parameter 'opt' in call}}
  _ = NotInitializableOptionalClass() // expected-error {{'NotInitializableOptionalClass' cannot be constructed because it has no accessible initializers}}
}

// expected-error@+1{{actor 'NotInitializableActor' has no initializers}}
actor NotInitializableActor {

  // expected-note@+1{{stored property 'a' without initial value prevents synthesized initializers}}
  var a: Int
  // expected-note@+1{{stored property 'b' without initial value prevents synthesized initializers}}
  var b: Float
}
